# cpp-hacking

./: CMakeLists.txt  README.md  build-wasm.sh  codecov.yml  project.json
.github/workflows/: ci.yml  codeql-analysis.yml  deploy-pages.yml
cmake/: Cache.cmake  Emscripten.cmake  InterproceduralOptimization.cmake  Options.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
src/: main.cpp
test/: CMakeLists.txt  example_test.cpp
web/: app.js  index.html  package-lock.json  package.json  vite.config.js
